Added flag summary plot
Also added better debugging message if there is a problem opening
one of the saved image files while creating the PDF.

--- a/inputs/variables.toml
+++ b/inputs/variables.toml
@@ -60,6 +60,9 @@ clone = 'scatter'
 # ------------- #
 
 [[plots]]
+kind = "flag-analysis"
+
+[[plots]]
 kind = "rolling-timeseries"
 yvar = "xluft"
 op = "median"
