Minor updates to improve consistency/user-friendliness across plots types
* timing-error-am-pm plots now take `sza_range` instead of `sza_ranges`,
  which is a two-element list instead of nested lists.
* `--json-limits` command line argument renamed to `--limits`
* Default treatment of the `label` keyword for styles now allows a
  custom label to have the data label formatted into it, like the
  more specialized plots
* Fixed timing error label treatment when gathering keywords: using
  `setdefault` would have kept the formatted label from replacing the
  unformatted one if a custom label had been passed.
* Added untested rolling/resampling code to the `TimeseriesMixin` class.

--- a/inputs/variables.toml
+++ b/inputs/variables.toml
@@ -85,7 +85,7 @@ kind = "flag-analysis"
 
 [[plots]]
 kind = "timing-error-am-pm"
-sza_ranges = [[70, 80]]
+sza_range = [70, 80]
 
 [[plots]]
 kind = "timing-error-szas"
