Added resampled and rolling timeseries plots, along with their docs

--- a/inputs/limits.toml
+++ b/inputs/limits.toml
@@ -24,6 +24,7 @@ fvsi = [0, 20]
 "*vsf_hdo*" = [0.3, 2]
 "*vsf_hf*" = [0.3, 2]
 "*vsf_hcl*" = [0.7, 1.4]
+"*vsf_o2*" = [0.9, 1.1]
 "vsf_*" = [0.9, 1.1]
 "*_fs" = [-2, 2]
 "*_sg" = [-8, 8]
