Added rolling derivative plots and default ZLO/SZA derivative plot
Related changes:

* `get_plot_kws` methods now take a `_format_label` argument which
  disables formatting the label(s). This is to allow child classes
  to do their own formatting.
* `ScatterPlot` and its subclasses now set a default marker to avoid
  mysterious empty plots. `HexbinPlot` pops this keyword, since
  hexbins don't accept the `marker` keyword.
* Plot progress in `__main__` now flushes stdout immediately when
  starting the plot. The derivative plot takes long enough that this
  is noticeable.

--- a/inputs/limits.toml
+++ b/inputs/limits.toml
@@ -31,3 +31,6 @@ fvsi = [0, 20]
 "*_zo" = [-0.006, 0.006]
 "*_cfampocl" = [0, 0.005]
 "*_cfperiod" = [-1, 50]
+
+[rolling-derivative]
+zco2_4852a_zo = [-1e-4, 1e-4]
