Added delta-timeseries plots
As part of this, did some refactoring on how the units and axis
labels get set up to reduce copy/paste code

--- a/inputs/variables.toml
+++ b/inputs/variables.toml
@@ -62,6 +62,19 @@ clone = 'scatter'
 clone = 'scatter'
 
 
+[style.default.delta-timeseries]
+clone = 'timeseries'
+
+[style.main.delta-timeseries]
+clone = 'timeseries'
+
+[style.ref.delta-timeseries]
+clone = 'timeseries'
+
+[style.context.delta-timeseries]
+clone = 'timeseries'
+
+
 [style.default.resampled-timeseries]
 clone = 'scatter'
 legend_kws = {ncol = 2}
