zmin-zobs plot implemented, ancillary data format updated

--- a/inputs/site_ancillary_data.toml
+++ b/inputs/site_ancillary_data.toml
@@ -1,119 +1,119 @@
-[mod_data.level0.ae]
+[site_data.ae.mod_data.level0]
 Height = 0.069
 
-[mod_data.level0.an]
+[site_data.an.mod_data.level0]
 Height = 0.093
 
-[mod_data.level0.bi]
+[site_data.bi.mod_data.level0]
 Height = 0.199
 
-[mod_data.level0.br]
+[site_data.br.mod_data.level0]
 Height = 0.088
 
-[mod_data.level0.bu]
+[site_data.bu.mod_data.level0]
 Height = 0.174
 
-[mod_data.level0.ci]
+[site_data.ci.mod_data.level0]
 Height = 0.475
 
-[mod_data.level0.db]
+[site_data.db.mod_data.level0]
 Height = 0.079
 
-[mod_data.level0.df]
+[site_data.df.mod_data.level0]
 Height = 0.949
 
-[mod_data.level0.et]
+[site_data.et.mod_data.level0]
 Height = 0.578
 
-[mod_data.level0.eu]
+[site_data.eu.mod_data.level0]
 Height = 0.241
 
-[mod_data.level0.fc]
+[site_data.fc.mod_data.level0]
 Height = 1.921
 
-[mod_data.level0.gm]
+[site_data.gm.mod_data.level0]
 Height = 1.309
 
-[mod_data.level0.he]
+[site_data.he.mod_data.level0]
 Height = 0.091
 
-[mod_data.level0.hw]
+[site_data.hw.mod_data.level0]
 Height = 0.174
 
-[mod_data.level0.if]
+[site_data.if.mod_data.level0]
 Height = 0.333
 
-[mod_data.level0.iz]
+[site_data.iz.mod_data.level0]
 Height = 0.213
 
-[mod_data.level0.jc]
+[site_data.jc.mod_data.level0]
 Height = 0.61
 
-[mod_data.level0.jf]
+[site_data.jf.mod_data.level0]
 Height = 0.605
 
-[mod_data.level0.js]
+[site_data.js.mod_data.level0]
 Height = 0.21
 
-[mod_data.level0.jx]
+[site_data.jx.mod_data.level0]
 Height = 0.608
 
-[mod_data.level0.ka]
+[site_data.ka.mod_data.level0]
 Height = 0.327
 
-[mod_data.level0.lh]
+[site_data.lh.mod_data.level0]
 Height = 0.815
 
-[mod_data.level0.ll]
+[site_data.ll.mod_data.level0]
 Height = 0.817
 
-[mod_data.level0.lr]
+[site_data.lr.mod_data.level0]
 Height = 0.814
 
-[mod_data.level0.ma]
+[site_data.ma.mod_data.level0]
 Height = 0.103
 
-[mod_data.level0.ni]
+[site_data.ni.mod_data.level0]
 Height = 0.22
 
-[mod_data.level0.ny]
+[site_data.ny.mod_data.level0]
 Height = 0.322
 
-[mod_data.level0.oc]
+[site_data.oc.mod_data.level0]
 Height = 0.397
 
-[mod_data.level0.or]
+[site_data.or.mod_data.level0]
 Height = 0.19
 
-[mod_data.level0.pa]
+[site_data.pa.mod_data.level0]
 Height = 0.537
 
-[mod_data.level0.pr]
+[site_data.pr.mod_data.level0]
 Height = 0.165
 
-[mod_data.level0.ra]
+[site_data.ra.mod_data.level0]
 Height = 0.398
 
-[mod_data.level0.rj]
+[site_data.rj.mod_data.level0]
 Height = 0.477
 
-[mod_data.level0.so]
+[site_data.so.mod_data.level0]
 Height = 0.283
 
-[mod_data.level0.tk]
+[site_data.tk.mod_data.level0]
 Height = 0.102
 
-[mod_data.level0.we]
+[site_data.we.mod_data.level0]
 Height = 0.37
 
-[mod_data.level0.wg]
+[site_data.wg.mod_data.level0]
 Height = 0.073
 
-[mod_data.level0.xh]
+[site_data.xh.mod_data.level0]
 Height = 0.096
 
-[mod_data.level0.yk]
+[site_data.yk.mod_data.level0]
 Height = 0.4
 
-[mod_data.level0.zs]
+[site_data.zs.mod_data.level0]
 Height = 1.39
