--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,6 +14,11 @@ help:
 
 .PHONY: help Makefile
 
+# https://gist.github.com/cobyism/4730490 describes how to push a subdir
+# as the gh-pages branch
+publish:
+	(cd ../; git subtree push --prefix docs/build/html/ origin gh-pages)
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
